--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,19 @@
 <!DOCTYPE html>
 <html>
     <head>
-	<title>Home Automation | </title>
+	     <title>Home Automation | </title>
+       <link rel="stylesheet" href="/bower_components/font-awesome/css/font-awesome.css" media="screen" title="no title" charset="utf-8">
+       <link rel="stylesheet" href="/css/master.css" media="screen" title="no title" charset="utf-8">
     </head>
     <body>
-	<h1>Home Automation</h1>
+      <section>
+        <h1>Home Automation</h1>
+        <div class="pin">
+            <i class="fa activate fa-check-circle-o fa-2x"></i>
+            <i class="fa close fa-times-circle-o fa-2x"></i>
+            <i class="fa turnon fa-play-circle-o fa-2x"></i>
+            <h2>Pin 11</h2>
+        </div>
+      </section>
     </body>
 </html>
