--- a/public/index.html
+++ b/public/index.html
@@ -1,19 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="HomeAutomation">
     <head>
 	     <title>Home Automation | </title>
        <link rel="stylesheet" href="/bower_components/font-awesome/css/font-awesome.css" media="screen" title="no title" charset="utf-8">
        <link rel="stylesheet" href="/css/master.css" media="screen" title="no title" charset="utf-8">
     </head>
     <body>
-      <section>
+      <section ng-controller="PinController">
         <h1>Home Automation</h1>
-        <div class="pin">
-            <i class="fa activate fa-check-circle-o fa-2x"></i>
-            <i class="fa close fa-times-circle-o fa-2x"></i>
-            <i class="fa turnon fa-play-circle-o fa-2x"></i>
-            <h2>Pin 11</h2>
-        </div>
+        <pin-action ng-repeat="number in pins" pin-number="number"></pin-action>
       </section>
+      <script type="text/javascript" src="/bower_components/angular/angular.js"></script>
+      <script type="text/javascript" src="/build/index.js"></script>
     </body>
 </html>
