Add route to get all pin statuses

--- a/public/index.html
+++ b/public/index.html
@@ -6,10 +6,10 @@
     </head>
     <body>
       <div class="container">
-          <button data-socket="1" type="button">A</button>
-          <button data-socket="2" type="button">B</button>
-          <button data-socket="3" type="button">C</button>
-          <button data-socket="4" type="button">D</button>
+          <button data-outlet="1" type="button">A</button>
+          <button data-outlet="2" type="button">B</button>
+          <button data-outlet="3" type="button">C</button>
+          <button data-outlet="4" type="button">D</button>
       </div>
     </body>
     <script type="text/javascript" src="/build.js"></script>
