--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,35 @@
           <button data-outlet="3" type="button">C</button>
           <button data-outlet="4" type="button">D</button>
       </div>
+
+      <div class="login-area active">
+        <form class="" action="index.html" method="post">
+            <h1>SIGN-IN</h1>
+            <svg width="100%" height="100%" viewBox="0 0 100 100"
+              preserveAspectRatio="none" xmlns="http://www.w3.org/2000/svg">
+              <path class="border" d="M50,0 L 100,0" vector-effect="non-scaling-stroke"/>
+              <path class="border" d="M50,0 L 0,0" vector-effect="non-scaling-stroke"/>
+            </svg>
+            <div class="form-element">
+              <input type="text" name="username" id="username" ng-model="username" value="" required>
+              <label for="username">User Name</label>
+              <svg class="element-wrapper" width="100%" height="100%" viewBox="0 0 100 100"
+                preserveAspectRatio="none" xmlns="http://www.w3.org/2000/svg">
+                <rect class="input-border" vector-effect="non-scaling-stroke"/>
+              </svg>
+            </div>
+
+            <div class="form-element">
+              <input id="password" type="password" name="password" ng-model="password" value="" required>
+              <label for="password">Password</label>
+              <svg class="element-wrapper" width="100%" height="100%" viewBox="0 0 100 100"
+                preserveAspectRatio="none" xmlns="http://www.w3.org/2000/svg">
+                <rect class="input-border" vector-effect="non-scaling-stroke"/>
+              </svg>
+            </div>
+            <button type="button" name="button">LOG-IN</button>
+        </form>
+      </div>
     </body>
     <script type="text/javascript" src="/build.js"></script>
 </html>
