--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
           <button data-outlet="4" type="button">D</button>
       </div>
 
-      <div class="login-area active">
+      <div class="login-area">
         <form class="" action="index.html" method="post">
             <h1>SIGN-IN</h1>
             <svg width="100%" height="100%" viewBox="0 0 100 100"
@@ -37,9 +37,11 @@
                 <rect class="input-border" vector-effect="non-scaling-stroke"/>
               </svg>
             </div>
-            <button type="button" name="button">LOG-IN</button>
+            <button type="submit" name="button">LOG-IN</button>
         </form>
       </div>
+
+      <div class="alert"></div>
     </body>
     <script type="text/javascript" src="/build.js"></script>
 </html>
